# configurator-rs-macro

./: Cargo.toml
src/: cli_builder.rs  config_builder.rs  freezable.rs  lib.rs
