[package]
name = "configurator-macros"
version = "0.0.0"
edition = "2024"
license = "Unlicense"
authors = ["Jack Hamilton jackham800@gmail.com"]
keywords = []
categories = []
repository = ""
description = ""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
